--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -11,6 +11,15 @@
           </div>
         </div>
 
+      <div class="flex-group-center">
+        <div class="abilities grid grid-3col">
+          <span class="resource-label">CURRENT</span> <span class="resource-label"></span><span class="resource-label">MAX</span>
+          <input type="text" name="system.stamina.value" value="{{data.system.stamina.value}}" data-dtype="Number"/>
+            <span class="resource-label center">SP</span>
+            <input type="text" name="system.stamina.max" value="{{data.system.stamina.max}}" data-dtype="Number"/>
+          </div>
+        </div>
+
         <div class="flex-group-center">
           <div class="abilities grid grid-3col">
             <span class="resource-label">DEFENSE</span><span class="resource-label"></span><span class="resource-label">BONUS</span>
